<resources>
    <string name="app_name">Sana Simple App</string>
    <string name="no_location_data_provided">یافت نشد</string>
    <string name="service_not_available">خطایی رخ داده است</string>
    <string name="invalid_lat_long_used">مختصات اشتباه است</string>
    <string name="no_address_found">آدرس یافت نشد</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="fine_address">آدرس دقیق</string>
    <string name="register_activity_title">لطفا اطلاعات ورود خود را وارد نمایید</string>
    <string name="field_name">نام</string>
    <string name="field_last_name">نام خانوادگی</string>
    <string name="field_phone_number">تلفن همراه</string>
    <string name="field_tel_number">تلفن ثابت</string>
    <string name="male">مرد</string>
    <string name="location_not_enabled">لوکیشن فعال نیست!</string>
    <string name="location_setting">تنطیمات لوکیشن</string>
    <string name="cancel">لغو</string>
    <string name="map_loading_failed">خطا در بارگذاری نقشه</string>
    <string name="general_err">خطایی رخ داده است مجدد تلاش کنید</string>
    <string name="ok">باشه!</string>
    <string name="internet_disconnected">اینترنت قط شده است</string>
    <string name="telephone_hint">مثال : 02100000000</string>
    <string name="mobilephone_hint">مثال : 09120000000</string>
</resources>
