<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="org.sana.simpleapp.view.RegisterActivity"
    tools:showIn="@layout/activity_register">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/general_space"
        android:background="@color/light_gray"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:padding="@dimen/general_space"
            android:text="@string/register_activity_title" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/general_space"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/general_space">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_space"
                android:background="@drawable/field_bg"
                android:orientation="horizontal">


                <org.sana.simpleapp.widget.EditTextWithPolicy
                    android:id="@+id/field_firstname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/unchecked_circle_gray"
                    android:duplicateParentState="true"
                    android:gravity="start"
                    android:inputType="text"
                    android:layoutDirection="rtl"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textDirection="rtl" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="@dimen/general_space"
                    android:text="@string/field_name" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_space"
                android:background="@drawable/field_bg"
                android:orientation="horizontal">


                <org.sana.simpleapp.widget.EditTextWithPolicy
                    android:id="@+id/field_lastname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/unchecked_circle_gray"
                    android:gravity="start"
                    android:inputType="text"
                    android:layoutDirection="rtl"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textDirection="rtl" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="@dimen/general_space"
                    android:text="@string/field_last_name" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_space"
                android:background="@drawable/field_bg"
                android:orientation="horizontal">


                <org.sana.simpleapp.widget.EditTextWithPolicy
                    android:id="@+id/field_phone_number"
                    android:layout_width="0dp"
                    android:hint="@string/mobilephone_hint"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/unchecked_circle_gray"
                    android:gravity="start"
                    android:inputType="numberDecimal"
                    android:layoutDirection="rtl"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textDirection="rtl"
                    app:policy="phone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="@dimen/general_space"
                    android:text="@string/field_phone_number" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_space"
                android:background="@drawable/field_bg"
                android:orientation="horizontal">


                <org.sana.simpleapp.widget.EditTextWithPolicy
                    android:id="@+id/field_telephone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/unchecked_circle_gray"
                    android:gravity="start"
                    android:hint="@string/telephone_hint"
                    android:inputType="numberDecimal"
                    android:layoutDirection="rtl"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textDirection="rtl"
                    app:policy="telephone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:padding="@dimen/general_space"
                    android:text="@string/field_tel_number" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/general_space"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/general_space">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_space"
                android:text="@string/fine_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/general_space"
                android:background="@drawable/field_bg"
                android:orientation="horizontal"
                android:padding="6dp">


                <org.sana.simpleapp.widget.EditTextWithPolicy
                    android:id="@+id/field_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/unchecked_circle_gray"
                    android:drawableLeft="@drawable/unchecked_circle_gray"
                    android:gravity="start"
                    android:inputType="text"
                    android:layoutDirection="ltr"
                    android:padding="5dp"
                    android:textDirection="rtl"
                    app:policy="address" />


            </LinearLayout>

            <RadioGroup
                android:checkedButton="@+id/female"
                android:id="@+id/toggle_gender"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@drawable/switch_bg"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:id="@+id/male"
                    android:background="@drawable/toggle_widget_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="مرد"
                    android:textColor="@drawable/toggle_color" />

                <RadioButton
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:id="@+id/female"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_widget_btn"
                    android:button="@null"
                    android:gravity="center"
                    android:text="زن"
                    android:textColor="@drawable/toggle_color" />
            </RadioGroup>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_bg_green"
        android:text="مرحله بعد"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>
